Added Basic Pages
Added the basic pages we will need to go live (templates/scaffolding).

--- a/SimpleCyberTech/Pages/Index.cshtml
+++ b/SimpleCyberTech/Pages/Index.cshtml
@@ -1,15 +1,15 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Home";
 }
 
-<section id="HeroSection" class="container-fluid position-relative mw-100 w-100 vh-100 text-center mx-auto p-0 overflow-hidden">
-    <video autoPlay loop muted playsInline class="position-absolute top-0 start-0 w-100 h-100 object-fit-cover z-1">
+<section id="HeroSection" class="position-relative vh-100 text-center">
+    <video autoPlay loop muted playsInline class="position-absolute top-0 start-0 w-100 h-100 object-fit-cover" autoplay muted loop playsinline>
         <source src="/video/line-background-video.mp4" type="video/mp4" />
     </video>
-    <div id="HeroOpacity" class="position-absolute d-flex align-items-center justify-content-center top-0 start-0 w-100 h-100 bg-black/25 z-2" aria-hidden="true" />       
-    <div class="container hero-jumbotron z-3">
+    <div class="position-absolute d-flex align-items-center justify-content-center top-0 start-0 w-100 h-100" aria-hidden="true" />
+    <div class="container hero-jumbotron">
         <h1 class="text-uppercase mb-3">CyberSecurity, Technology and Help Desk Simplified</h1>
         <h3 class="fst-italic my-3">We protect Southern California's small and medium size businesses with stress and jargon free security you can trust. No technical gibberish, just clear solutions that keep your business safe from digital threats.</h3>
         <a href="#" class="no-underline">
