--- a/SimpleCyberTech/Pages/Shared/_Layout.cshtml.css
+++ b/SimpleCyberTech/Pages/Shared/_Layout.cshtml.css
@@ -2,19 +2,23 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 /* Navigation */
-header.nav-link:focus, header.nav-link:hover {
-    color: var(--bs-dropdown-link-hover-color);
-    background-color: var(--bs-dropdown-link-hover-bg);
+header {
+  background-color: var(--sct-espresso);
 }
 .navbar .container-fluid {
   padding: 0;
 }
-.navbar-nav .nav-item {
-  padding: 0 1rem;
-}
 .navbar-logo {
   width: 100%;
-  max-width: 300px;
+  max-width: 250px;
+}
+header.nav-link:focus,
+header.nav-link:hover {
+    color: var(--bs-dropdown-link-hover-color);
+    background-color: var(--bs-dropdown-link-hover-bg);
+}
+.navbar-nav .nav-item {
+  padding: 0 1rem;
 }
 
 /* Footer */
@@ -45,6 +49,9 @@ footer h4 {
     width: 100%;
     max-width: 200px;
   }
+  .navbar {
+    text-align:center;
+  }
 
   /* Footer Section */
   .footer-top {
@@ -57,16 +64,24 @@ footer h4 {
 }
 
 /* Size - Small (SM: 576-768) */
-@media (min-width: 576px) and (max-width: 767px) {}
+@media (min-width: 576px) and (max-width: 767px) {
+  .navbar { text-align:center; }
+}
 
 /* Size - Medium (MD: 768-992) */
-@media (min-width: 768px) and (max-width: 991px) {}
+@media (min-width: 768px) and (max-width: 991px) {
+  .navbar { text-align:center; }
+}
 
 /* Size - Large (LG: 992-1200) */
-@media (min-width: 992px) and (max-width: 1199px) {}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .navbar { text-align:center; }
+}
 
 /* Size - Extra Large (XL: 1200-1400) */
-@media (min-width: 1200px) and (max-width: 1399px) {}
+@media (min-width: 1200px) and (max-width: 1399px) {
+  header .nav-link, header .dropdown-item { font-size: 1rem; }
+}
 
 /* Size - 2x Extra Large (XXL: >1400) */
 @media (min-width: 1400px) {}
